[package]
name = "fri-commitment"
version = "0.1.0"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/arnaucube/fri-commitment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-poly = "0.4.0"
ark-bn254 = { version = "0.4.0", default-features = false }
ark-ed-on-bn254 = { version = "0.4.0", default-features = true }
ark-crypto-primitives = { version = "0.4.0", default-features = true }
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
rand = { version = "0.8", features = [ "std", "std_rng" ] }
sha3 = "0.10.6"
merlin = { version = "3.0.0" }
